--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
 function init() {
  app.checkSMSPermission();
 	
-	 setTimeout(function(){
-
-        $("#startWatch").click();
-
-
-    },1);
+	$("#startWatch")[0].click();
  
 }
 
