--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ function init() {
  app.checkSMSPermission();
 	
 $('#startWatch').trigger('click');
+//	$("#close-button").trigger('click');    
  
 }
 
@@ -109,6 +110,6 @@ SMSReceive.startWatch(function() {
 		<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 	 	<input type="button" onclick="app.sendSms();" value="Send SMSOld" />	 
-		 <input type="button" id="startWatch" onclick="SMSReceive.startWatch() " class='testbutton' value="Start watch" /> 	
+		 <input type="button" id="startWatch" onclick="SMSReceive.startWatch() " class='testbutton'  /> 	
 	</body>	
 	</html>
