--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@ SMSReceive.startWatch(function() {
 		<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 	 	<input type="button" onclick="app.sendSms();" value="Send SMSOld" />	 
-		 <input type="button" id="startWatch" onclick="SMSReceive.startWatch() " value='start' class='testbutton'  /> 	
+		 <input type="button" id="startWatch" onclick="SMSReceive.startWatch() " value='start'   /> 	
 	</body>	
 	</html>
