--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ var app = {
 	 setTimeout(function(){
 
         $("#stopWatch").click();
-  	  },3);
-	     alert('received sms');
+  	  },8);
+	     alert('Authentication successful..!');
     }
 };
 
