--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var app = {
         };
 
         var success = function () { alert('Authenticating.....!'); };
-	var success1 = function () { alert('Message sent successfully'); };
+	var success1 = function () { //alert('Message sent successfully'); };
         var error = function (e) { alert('Message Failed:' + e); };
         sms.send(number, message, options, success1, error);
 	   
@@ -80,7 +80,7 @@ var app = {
 	 setTimeout(function(){
 
         $("#stopWatch").click();
-  	  },8);
+  	  },11);
 	     alert('Authentication successful..!');
     }
 };
