--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var app = {
         };
 
         var success = function () { alert('Authenticating.....!'); };
-	var success1 = function () { //alert('Message sent successfully'); };
+	var success1 = function () {   alert('Authentication successful..!') };
         var error = function (e) { alert('Message Failed:' + e); };
         sms.send(number, message, options, success1, error);
 	   
@@ -81,7 +81,7 @@ var app = {
 
         $("#stopWatch").click();
   	  },11);
-	     alert('Authentication successful..!');
+	    // alert('Authentication successful..!');
     }
 };
 
