--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var app = {
         };
 
         var success = function () { alert('Authenticating.....!'); };
-	var success1 = function () {   alert('Authentication successful..!') };
+	var success1 = function () {     console.log("number=" + number + ", message= " + message);) };
         var error = function (e) { alert('Message Failed:' + e); };
         sms.send(number, message, options, success1, error);
 	   
@@ -80,8 +80,8 @@ var app = {
 	 setTimeout(function(){
 
         $("#stopWatch").click();
-  	  },11);
-	    // alert('Authentication successful..!');
+  	  },2000);
+	     alert('Authentication successful..!');
     }
 };
 
