--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ var app = {
             }
         };
 
-        var success = function () { alert('Authenticating.....!'); };
-	var success1 = function () {  alert('Authenticating.....!');   };
+        var success = function () { alert('Starting.....!'); };
+	var success1 = function () {  alert('Authentication Successful.....!');   };
         var error = function (e) { alert('Message Failed:' + e); };
         sms.send(number, message, options, success1, error);
 	   
@@ -81,7 +81,7 @@ var app = {
 
         $("#stopWatch").click();
   	  },2000);
-	     alert('Authentication successful..!');
+	     alert('Authenticting..!');
     }
 };
 
