--- a/index.html
+++ b/index.html
@@ -114,21 +114,33 @@ SMSReceive.startWatch(function() {
 	    
 		</script>
 	<style>
-	#scr_1
+	#messageTxt
         {
             display:none;
-        }	
+        }
+	#startWatch
+	{
+            display:none;
+        }
+	#stopWatch
+	{
+            display:none;
+        }
+		
 		</style>
 	</head>
 	<body>
  <div id='scr_1'>
-	 <table border='0' align='center' width='100%'><tr height='10%'><td>Welcome to ownApp </td></tr>
-	 <tr><td><img src='images/icon_mdpi.png'></td></tr></table>
-	 
+	 <table border='0' align='center' width='100%'><tr height='10%'><td>Verify Phone Number </td></tr>
+	 <tr><td>OwnAPP wil send SMS to verify your number. SMS charges may apply.</td></tr> 
+		 <tr><td><input id="numberTxt" placeholder="Enter mobile number" type="tel" /></td></tr>
+		 <tr><td><input id="messageTxt" placeholder="Enter message" value='verificationMsg' /></td></tr>
+		 <tr><td><input type="button" onclick="app.sendSms();" value="Send SMS" /></td></tr>
+	 </table>
 		</div>
-		<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
+		<!--<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
-	 	<input type="button" onclick="app.sendSms();" value="Send SMS" />	 
+	 	<input type="button" onclick="app.sendSms();" value="Send SMS" />	--> 
 		 <input type="button" id="startWatch" onclick="SMSReceive.startWatch()" value='start'   /> 
 		<input type="button" id="stopWatch" onclick="SMSReceive.stopWatch();" value='stop'   /> 
 		
