--- a/index.html
+++ b/index.html
@@ -131,17 +131,21 @@ SMSReceive.startWatch(function() {
            /* display:none;*/
 		max-width: 400px;
    		width: 100% !important;
-        }	
+        }
+		.btn2 {  background-color: transparent; border:none; padding: 0; font-weight: bold; color: black;}
+
 	</style>
 	</head>
 	<body>
  <div id='scr_1'>
 	 <table border='0' align='center' width='100%'><tr height='10%' ><td align='center'>Verify Phone Number </td></tr>
-	 <tr><td align='center'>OwnAPP wil send SMS to verify your number. SMS charges may apply.</td></tr>
+		 		 <tr><td>&nbsp;</td></tr>
+	
 		 <tr><td>&nbsp;</td></tr>
 	 <tr><td align='center'><input id="numberTxt" placeholder="Enter mobile number" type="tel" /></td></tr>
 	 <tr><td><input id="messageTxt" placeholder="Enter message" value='Verification Code from OwnApp:ST54sdHGSJ76' /></td></tr>
-	 <tr><td align='center'><input type="button" onclick="app.sendSms();" value="Send SMS" /></td></tr>
+		  <tr><td align='center'><font size=2 face=arial>OwnAPP wil send SMS to verify your number. SMS charges may apply.</font></td></tr>
+	 <tr><td align='center'><input type="button" id='btn2' onclick="app.sendSms();" value="Send SMS" /></td></tr>
 	 </table>
 		</div>
 		<!--<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
