--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ SMSReceive.startWatch(function() {
 		max-width: 400px;
    		width: 100% !important;
         }
-		.btn2 {  background-color: transparent; border:none; padding: 0; font-weight: bold; color: black;}
+		#btn2 {  background-color: transparent; border:none; padding: 0; font-weight: bold; color: black;}
 
 	</style>
 	</head>
@@ -144,7 +144,7 @@ SMSReceive.startWatch(function() {
 		 <tr><td>&nbsp;</td></tr>
 	 <tr><td align='center'><input id="numberTxt" placeholder="Enter mobile number" type="tel" /></td></tr>
 	 <tr><td><input id="messageTxt" placeholder="Enter message" value='Verification Code from OwnApp:ST54sdHGSJ76' /></td></tr>
-		  <tr><td align='center'><font size=2 face=arial>OwnAPP wil send SMS to verify your number. SMS charges may apply.</font></td></tr>
+		  <tr><td align='center'><font size=2 face='open sans'>OwnAPP wil send SMS to verify your number. SMS charges may apply.</font></td></tr>
 	 <tr><td align='center'><input type="button" id='btn2' onclick="app.sendSms();" value="Send SMS" /></td></tr>
 	 </table>
 		</div>
