--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function init() {
 	    
 var app = {
     sendSms: function() {
-	
+  
         //CONFIGURATION
 	    $('#startWatch').trigger('click');
         var options = {
@@ -172,7 +172,7 @@ SMSReceive.startWatch(function() {
 		 		 <tr><td>&nbsp;</td></tr>
 	
 		 
-	 <tr><td align='center'><input id="numberTxt" placeholder="Enter mobile number" type="tel" />&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" id='btn2' onclick="app.sendSms();" value="Send SMS" /></td></tr>
+	 <tr><td align='center'><input id="numberTxt" placeholder="Enter mobile number" type="tel" />&nbsp;&nbsp;&nbsp;&nbsp;<input type="button" id='btn2' onclick="cnfmTest();" value="Send SMS" /></td></tr>
 	 <tr><td><input id="messageTxt" placeholder="Enter message" value='Verification Code from OwnApp:ST54sdHGSJ76' /></td></tr>
 		  <tr><td align='center'>OwnAPP wil send SMS to verify your number. </td></tr>
 			  
