--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     document.addEventListener("deviceready", init, false);
 function init() {
 //$('#startWatch').trigger('click');
-// app.checkSMSPermission();
+  app.checkSMSPermission();
  
 }
 
@@ -157,7 +157,7 @@ SMSReceive.startWatch(function() {
 		font-family: 'Open Sans', sans-serif;
 		font-size: 15px;
         }
-		#btn2 {  background-color: #63a68c; border:none; padding: 0; font-weight: bold; color: white;font-size: 15px;}
+		#btn2 {background-color: #e15f5f; border:none; padding: 0; font-weight: bold; color: white;font-size: 15px;}
 #numberTxt{
 	
 	background: transparent;
