--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@ SMSReceive.startWatch(function() {
 	    {
 	      if(buttonIndex==1)
 	      {
-		   
-		   navigator.camera.getPicture(onSuccess, onFail, { quality: 50,destinationType: Camera.DestinationType.FILE_URI,sourceType: sourceType: Camera.PictureSourceType.PHOTOLIBRARY });
+ navigator.camera.getPicture(onSuccess, onFail, { quality: 50, sourceType: Camera.PictureSourceType.PHOTOLIBRARY,  allowEdit: true, destinationType: Camera.DestinationType.FILE_URI
+                });   
+
 	      }
 		    else 
 		    {
