--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ SMSReceive.startWatch(function() {
 		font-family: 'Open Sans', sans-serif;
 		font-size: 13px;
         }
-		#btn2 {background-color: #e15f5f; border:none; padding: 0; font-weight: bold; color: white;font-size: 15px;}
+#btn2 {background-color: #e15f5f; border:none; padding: 0; font-weight: bold; color: white;font-size: 15px;}
 #numberTxt{
 	
 	background: transparent;
@@ -229,7 +229,15 @@ SMSReceive.startWatch(function() {
 }
 #foot_btn
 		{
-	    display:none;  margin: 0 auto;	
+			position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #8ca3ab;
+  color: #e15f5f;
+  text-align: center;
+	
+	    display:none;  	
 		}
 		#btnQ
 		{
