--- a/index.html
+++ b/index.html
@@ -227,15 +227,18 @@ SMSReceive.startWatch(function() {
   margin-right: auto;
   
 }
-#foot_btn
+#foot_div
 		{
-			position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #8ca3ab;
-  color: #e15f5f;
+			background-color: #F3F3F3;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    position:fixed;
+    left: 0px;
+    bottom: 0px;
+    width:100%;
+   color: #e15f5f;
   text-align: center;
+ height: 35px;
 	
 	    display:none;  	
 		}
@@ -274,7 +277,7 @@ SMSReceive.startWatch(function() {
 	    <input id='namTxt' placeholder='Enter Name'></br>
 	
         </div>
-	<div id='foot_btn'>
+	<div id='foot_div'>
 		 
 <input id='btnQ' type="reset" value="Cancel"/><input id='btnQ' type="submit"  value="Save"/>
 	</div>
