--- a/index.html
+++ b/index.html
@@ -229,18 +229,15 @@ SMSReceive.startWatch(function() {
 }
 #foot_div
 		{
-			background-color: #F3F3F3;
-    padding-top: 10px;
-    padding-bottom: 0px;
-    position:fixed;
+	background-color: black;
+     position:fixed;
     left: 0px;
     bottom: 0px;
     width:100%;
+   height:100px;
    color: #e15f5f;
   text-align: center;
- height: 35px;
-	
-	    display:none;  	
+      display:none;  	
 		}
 		#btnQ
 		{
