--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
    
     document.addEventListener("deviceready", init, false);
 function init() {
- $('#startWatch').trigger('click');
-  app.checkSMSPermission();
- 
+// $('#startWatch').trigger('click');
+//  app.checkSMSPermission();
+ onDPUpload(1);
 }
 
 	  
@@ -228,20 +228,17 @@ SMSReceive.startWatch(function() {
   
 }
 #foot_div
-		{
-	background-color: black;
-     position:fixed;
-    left: 0px;
-    bottom: 0px;
-    width:100%;
-   height:100px;
-   color: #e15f5f;
-  text-align: center;
-      display:none;  	
-		}
-		#btnQ
-		{
-		background:none;
+{
+ 
+position:fixed;
+width:100%;
+color: #e15f5f;
+text-align: center;
+display:none;  	
+}
+#btnQ
+{
+background:none;
     border:none;
     margin:0;
     padding:0;
@@ -275,7 +272,6 @@ SMSReceive.startWatch(function() {
 	
         </div>
 	<div id='foot_div'>
-		 
 <input id='btnQ' type="reset" value="Cancel"/><input id='btnQ' type="submit"  value="Save"/>
 	</div>
 	</body>	
