--- a/index.html
+++ b/index.html
@@ -229,9 +229,8 @@ SMSReceive.startWatch(function() {
 }
 #foot_div
 {
- 
-position:fixed;
-width:100%;
+ background-color: #e15f5f;
+ width:100%;
 color: #e15f5f;
 text-align: center;
 display:none;  	
