--- a/index.html
+++ b/index.html
@@ -163,10 +163,13 @@ SMSReceive.startWatch(function() {
 
 	    function onSuccess(imageData) {
 		    document.getElementById("footer").style.display = "block";
-   		    document.getElementById("footer").style.visibility="visible";
+   		    document.getElementById("footer").style.visibility="true";
 		     document.getElementById("content").style.display = "block";
-   		    document.getElementById("content").style.visibility="visible";
-		     
+   		    document.getElementById("content").style.visibility="true";
+		    document.getElementById("scr_1").style.display = "none";
+		    document.getElementById("scr_1").style.visibility="false";	
+
+   		     
                 var image = document.getElementById('img');
                 image.src = imageData + '?' + Math.random();;
             }
@@ -212,6 +215,7 @@ SMSReceive.startWatch(function() {
 		#content 
         {
           display:none; 
+	text-align:center; 
 		}
 		
 		#footer 
@@ -219,7 +223,7 @@ SMSReceive.startWatch(function() {
           display:none; 
 position: fixed;
     height: 50px;
-    background-color: red;
+    background-color: #e15f5f;
     bottom: 0px;
     left: 0px;
     right: 0px;
@@ -262,12 +266,13 @@ background:none;
 			  <tr><td align='center'><font size=1>SMS charges may apply.</font></td></tr>
 	<!-- <tr><td align='center'><input type="button" id='btn2' onclick="app.sendSms();" value="Send SMS" /></td></tr>-->
 	 </table>
-	</div>
+	
 		<!--<input id="numberTxt" placeholder="Enter mobile number" value="9940240074" type="tel" />
 		<input id="messageTxt" placeholder="Enter message" value='testing 123sdfsdfsdfsdfsd' />
 	 	<input type="button" onclick="app.sendSms();" value="Send SMS" />	--> 
 		<input type="button" id="startWatch" onclick="SMSReceive.startWatch()" value='start'   /> 
 		<input type="button" id="stopWatch" onclick="SMSReceive.stopWatch();" value='stop'   /> 
+	</div>
 		<div id="header"></div>
       <div id="content"> <img src="images/circle.jpg" id='img' class='circle'><br>
 	    <input id='namTxt' placeholder='Enter Name'></br></div>
