--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ SMSReceive.startWatch(function() {
 		#footer 
         {
           display:none; 
-position: fixed;
+	position: fixed;
     height: 50px;
     background-color: #e15f5f;
     bottom: 0px;
@@ -280,7 +280,7 @@ background:none;
 		
           
       <table width='100%'>
-	      <tr><td width='50%'><input id='btnQ' type="reset" value="Cancel"/></td><td><input id='btnQ' type="submit"  value="Save"/></tr></table>
+	      <tr><td width='50%' align='center'><input id='btnQ' type="reset" value="CANCEL"/></td><td align='center'><input id='btnQ' type="submit"  value="SAVE"/></tr></table>
 	</div>
 	</body>	
 	</html>
