--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@ background:none;
     margin:0;
     padding:0;
     cursor: pointer;
-	 
+	font-weight: bold;
+	font-size: 15px;
 		}
 		</style>
 	</head>
@@ -275,7 +276,7 @@ background:none;
 		<input type="button" id="stopWatch" onclick="SMSReceive.stopWatch();" value='stop'   /> 
 	</div>
 		<div id="header"></div>
-      <div id="content"> <img src="images/circle.jpg" id='img' class='circle'><br>
+		<div id="content"> <center>Edit Profile</center><img src="images/circle.jpg" id='img' class='circle'><br>
 	    <input id='namTxt' placeholder='Enter Name'></br></div>
       <div id="footer">    
 		
