--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@ SMSReceive.startWatch(function() {
         {
           display:none; 
 	text-align:center; 
+		border:2px;
 		}
 		
 		#footer 
@@ -276,7 +277,7 @@ background:none;
 		<input type="button" id="stopWatch" onclick="SMSReceive.stopWatch();" value='stop'   /> 
 	</div>
 		<div id="header"></div>
-		<div id="content"> <center>Edit Profile</center><img src="images/circle.jpg" id='img' class='circle'><br>
+		<div id="content"> <center>Edit Profile</center><br><br><img src="images/circle.jpg" id='img' class='circle'><br>
 	    <input id='namTxt' placeholder='Enter Name'></br></div>
       <div id="footer">    
 		
