--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ SMSReceive.startWatch(function() {
     left: 0px;
     right: 0px;
     margin-bottom: 0px;
+align-items:center;
+		 vertical-align: middle;
 		}	
 		
 		.circle {
@@ -257,7 +259,7 @@ background:none;
 	font-size: 15px;
 		}
 
-namTxt
+#namTxt
 {
 background: transparent;
  border: none;
