--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function saveProfile()
 		    var nbr='9940240074'; 
 	    //   nbr = document.getElementById('numberTxt').value.toString(); 
 	     var nam = document.getElementById('namTxt').value; 
-	    
+	  alert('in');
 	var params = "uNo=" + nbr +"&nam=" + nam; 
 	 var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
