--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function saveProfile()
 	    var nbr1='9940240074'; 
 	    //   nbr1 = number1; 
 	     var nam1 = document.getElementById('namTxt').value; 
-var url = 'wah.writeacademy.in/test.php';
+var url = 'www.writeacademy.in/test.php';
 var params = "uNo=" + nbr1 +"&nam=" + nam1; 
 		      alert(url);  alert(params);
 http.open('POST', url, true);
