--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ function init() {
 // $('#startWatch').trigger('click');
 //  app.checkSMSPermission();
 // onDPUpload(1);
-	saveProfile()
+	saveProfile();
 }
     
 	    
