--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@ function saveProfile()
 	 var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
      if (this.readyState == 4) {
-	 //   alert(this.status);
+	    alert(this.status);
       if(this.status == 200 || this.status == 0){
-   	//	alert(this.responseText);
+    	alert(this.responseText);
 	      if(this.responseText.charAt(0)=='1')
-	          navigator.notification.alert('Profile Added',   alertDismissed,  'Profile',   'OK'  );
+	        //  navigator.notification.alert('Profile Added',   alertDismissed,  'Profile',   'OK'  );
    }
     };
   }
