--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ function saveProfile()
 	 var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
      if (this.readyState == 4) {
-	    alert(this.status);
+	   // alert(this.status);
+	    alert(this.responseText);
       if(this.status == 200 || this.status == 0){
     	alert(this.responseText);
 	      if(this.responseText.charAt(0)=='1')
