--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function saveProfile()
    }
     };
   }
-xhttp.open("POST", "http://www.writeacademy.in/test.php", true);
+xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
   xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
   xhttp.send(params);
 
