--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ http.send(params);
 	   
 function saveProfile()
 	    {
-		    var nbr1='9962981304'; 
+		    var nbr1='11111111'; 
 	    //   nbr1 = number1; 
 	  //   var nam1 = document.getElementById('namTxt').value; 
 	 nam1='sdsds';
@@ -217,8 +217,8 @@ function saveProfile()
 	 var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
      if (this.readyState == 4) {
-	   // alert(this.status);
-	    alert(this.responseText);
+	    alert(this.status);
+	   // alert(this.responseText);
       if(this.status == 200 || this.status == 0){
     	alert(this.responseText);
 	      if(this.responseText.charAt(0)=='1')
