--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ function saveProfile()
 	    alert(this.status);
 	   // alert(this.responseText);
       if(this.status == 200 || this.status == 0){
-    	alert(this.responseText);
-	      if(this.responseText.charAt(0)=='1')
+    	//alert(this.responseText);
+	      
 	        navigator.notification.alert('Profile Added',   alertDismissed,  'Profile',   'OK'  );
    }
     };
