--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	var  nam1='sdsds';
 	var params = "uNo=" + nbr1 +"&nam=" + nam1; 
 		    alert(params);
-	   var xhttp = new XMLHttpRequest();  
+	   var xmlhttp = new XMLHttpRequest();  
 	 xmlhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 xmlhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
 xmlhttp.send(params);   
