--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@ $.ajax({
     dataType: "json",
     data: formData,
     success: function(data) {
-        //success handling
+        alert('success');
     },
     error: function(data) {
-        //error handling
+        alert('error');
     }
 });
 		    
