--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	    
 	    function ajax()
 	    {
-		var nbr1='11111111'; 
+		alert(in');
+		    var nbr1='11111111'; 
 	    	 nam1='sdsds';
 	 
  	$.ajax({
@@ -369,7 +370,7 @@ background: transparent;
           
       <table width='100%'>
 	    <form>
-	      <tr><td width='50%' valign='middle' align='center'><input id='btnQ' type="reset" value="CANCEL"/></td><td valign='middle' align='center'><input id='btnQ' type="button"  value="SAVE" onclick='saveProfile();' /></tr></table>
+	      <tr><td width='50%' valign='middle' align='center'><input id='btnQ' type="reset" value="CANCEL"/></td><td valign='middle' align='center'><input id='btnQ' type="button"  value="SAVE" onclick='ajax();' /></tr></table>
 	      </form>
 	</div>
 	</body>	
