--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	    
 	    function ajax()
 	    {
-		alert(in');
+		alert('in');
 		    var nbr1='11111111'; 
 	    	 nam1='sdsds';
 	 
