--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <script type="text/javascript" src="cordova.js"></script>
+	<script class="jsbin" src="jquery.min.js"></script>
+
     <script>
    
     document.addEventListener("deviceready", init, false);
