--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	   // $("#btnQ").on("submit", function(event) {
             //    event.preventDefault();
 
-	    function ajax();
+	    function ajax() 
 	    {
 	    alert('yes')
                $.ajax({
