--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
         dataType: 'json',
         contentType: "application/json; charset=utf-8",
         success: function (data) {
-            alert(data.username);
+            alert('done');
         },
         error: function () {
             alert("Error");
