--- a/index.html
+++ b/index.html
@@ -242,10 +242,13 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	    function ajax() 
 	    {
 	    alert('yes')
+		    var nbr1='11111111'; 
+		 nam1='sdsds';
                $.ajax({
-        url: "http://www.writeacademy.in/mmf/test.php?uNo=" + nbr1 +"&nam=" + nam1,
+        url: "http://www.writeacademy.in/mmf/test.php",
         type: 'POST',
-        dataType: 'json',
+	data: "uNo=" + nbr1+ "&nam=" + nam1,
+	dataType: 'json',
         contentType: "application/json; charset=utf-8",
         success: function (data) {
             alert('done');
