--- a/index.html
+++ b/index.html
@@ -245,13 +245,12 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 		    var nbr1='11111111'; 
 		 nam1='sdsds';
                $.ajax({
-        url: "http://www.writeacademy.in/mmf/test.php",
+        url: "http://www.writeacademy.in/mmf/test.php?uNo=" + nbr1+ "&nam=" + nam1,
         type: 'POST',
-	data: "uNo=" + nbr1+ "&nam=" + nam1,
 	dataType: 'json',
         contentType: "application/json; charset=utf-8",
         success: function (data) {
-            alert('done');
+            alert(data);
         },
         error: function () {
             alert("Error");
