--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@ xhttp.open("POST", "http://www.writeacademy.in/mmf/test.php", true);
 	dataType: 'json',
         contentType: "application/json; charset=utf-8",
         success: function (data) {
-            alert(data);
+            alert('success');
         },
-        error: function () {
-            alert("Error");
+        error: function (ts) {
+            alert(ts.responseText);
         }
     });
 	    }   
