--- a/index.html
+++ b/index.html
@@ -194,23 +194,20 @@ SMSReceive.startWatch(function() {
 
 	    function ajax() 
 	    {
-	   alert('yes')
+	   //alert('yes')
 		    var nbr1=number1; 
 		var nam1=document.getElementById('namTxt').value; 
 		    alert(nbr1);
 		        alert(nam1);
-               $.ajax({
-        url: "http://www.writeacademy.in/mmf/test.php?uNo=" + nbr1+ "&nam=" + nam1,
-        type: 'POST',
-	dataType: 'json',
-        contentType: "application/json; charset=utf-8",
-        success: function (data) {
-            alert('Profile added');
-        },
-        error: function (ts) {
-            alert(ts.responseText);
-        }
-    });
+              $.ajax({
+  type:"POST",
+  url:  url: "http://www.writeacademy.in/mmf/test.php",
+  data: "{'nbr1': 'nam1'}", 
+  contentType: "application/json;charset=utf-8",
+  dataType: "json",
+  success: function(data) { alert("success") },
+  error: function(ts) { alert(ts.responseText) }
+})
 	    }   
 		</script>
 	<style>
