--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ navigator.notification.confirm('Want to upload your display photo', onDPUpload, 
   {
      
 	  var number2= document.getElementById('numberTxt').value.toString(); /* iOS: ensure number is actually a string */
-	  //alert(number2);
+	  alert(number2);
 	
    	  if(number2.length==10)
 	  {
